<resources>
    <string name="app_name">DetailsApplication</string>

    <string name="title_goods_detail">宝贝详情页</string>

    <string name="detail_promotion_time">距离结束还剩:</string>

    <string name="detail_goods_intro">商品介绍</string>
    <string name="detail_g_param">规格参数</string>
    <string name="detail_package_intro">包装售后</string>

    <string name="detail_p_t_title">图文详情</string>

    <string name="detail_pull_up_tip">上拉查看图文详情</string>
    <string name="detail_pull_down_tip">下拉收起图文详情</string>

    <string name="detail_service">客服</string>
    <string name="detail_like">收藏</string>
    <string name="detail_cart">购物车</string>

    <string name="detail_buy_now">立即购买</string>
    <string name="detail_add_cart">加入购物车</string>
    
    <string name="detail_ticket_favourable">优惠</string>
    <string name="detail_ticket_gift">赠品</string>
    <string name="detail_ticket_gift_value">无需发货，首次关注店铺领取10元店铺券</string>
    <string name="detail_ticket_get">领券</string>
    <string name="detail_ticket_get_now">立即领取</string>
    <string name="detail_ticket_get_value">领券满%1$s减%2$s</string>

    <string name="detail_choice">已选</string>
    <string name="detail_server">服务</string>
    <string name="detail_server_str">商家发货&#038;售后；7天无理由退换；货到付款；...</string>
    <string name="detail_param">参数</string>
    <string name="detail_param_str">品牌；功能；系列；...</string>

    <string name="detail_bottom_home">首页</string>
    <string name="detail_bottom_service">客服</string>
    <string name="detail_bottom_cart">购物车</string>

    <string name="detail_off">满减</string>
    <string name="detail_gift">赠品</string>
    <string name="detail_point">积分</string>

    <string name="detail_save_get_value">总库存%1$s 店铺库存%2$s</string>
    <string name="detail_choose_flag_value">已选择%s</string>

    <string name="detail_empty_recommend">暂无推荐</string>
</resources>
