<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size_10dp"
        android:paddingBottom="@dimen/size_15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_15dp"
            android:layout_marginTop="@dimen/size_4dp"
            android:textColor="@color/gray_C1"
            android:textSize="@dimen/text_size_14sp"
            android:text="@string/detail_ticket_favourable"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_2dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_3dp"
                    android:src="@mipmap/ic_ticket"/>
                <TextView
                    android:id="@+id/detail_layout_ticket_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_12dp"
                    android:layout_marginTop="@dimen/size_4dp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_14sp"
                    android:text="@string/detail_ticket_get_value"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_11sp"
                    android:textColor="@color/color_A30598"
                    android:text="@string/detail_ticket_gift"
                    android:background="@drawable/bg_round_angle_gift"/>
                <TextView
                    android:id="@+id/detail_layout_ticket_gift_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_5dp"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_14sp"
                    android:text="@string/detail_ticket_gift_value"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/detail_layout_ticket_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_4dp"
            android:textColor="@color/gray_C1"
            android:textSize="@dimen/text_size_14sp"
            android:text="@string/detail_ticket_get"
            android:drawablePadding="@dimen/size_5dp"
            android:drawableRight="@drawable/ic_arrow_right"/>
    </LinearLayout>
</layout>