<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_10dp"
            android:paddingBottom="@dimen/size_10dp">
            <TextView
                android:id="@+id/server_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_16sp"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/server_close_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_clear"/>
        </RelativeLayout>

        <View style="@style/DeepUnderLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_20dp"
            android:paddingTop="@dimen/size_10dp"
            android:paddingBottom="@dimen/size_10dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/ticket_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10dp"
                android:cacheColorHint="@android:color/transparent"
                android:fadingEdge="none"
                android:divider="@drawable/pop_list_divider_line"/>

            <View style="@style/DeepUnderLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_15dp"
                android:paddingBottom="@dimen/size_15dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_A30598"
                    android:textSize="@dimen/text_size_11sp"
                    android:text="@string/detail_off"
                    android:background="@drawable/bg_round_angle_gift"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_14sp"
                    android:text="鞋子满减，满100减10"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>

            <View style="@style/DeepUnderLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_15dp"
                android:paddingBottom="@dimen/size_15dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_A30598"
                    android:textSize="@dimen/text_size_11sp"
                    android:text="@string/detail_gift"
                    android:background="@drawable/bg_round_angle_gift"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_14sp"
                    android:text="［无需发货］［首次关注店铺］［领取1..."/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>

            <View style="@style/DeepUnderLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_15dp"
                android:paddingBottom="@dimen/size_15dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_A30598"
                    android:textSize="@dimen/text_size_11sp"
                    android:text="@string/detail_point"
                    android:background="@drawable/bg_round_angle_gift"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_14sp"
                    android:text="购买可得458积分"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>

            <View style="@style/DeepUnderLine"/>
        </LinearLayout>
    </LinearLayout>

</layout>